@@ -19,11 +19,11 @@ import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
@@ -46,7 +46,7 @@ class UserControllerTest {
     private UserUtils userUtils;
 
     @BeforeEach
-    void init(){
+    void init() {
         userList = userUtils.newUserList();
     }
 
@@ -133,9 +133,9 @@ class UserControllerTest {
 
 
         mockMvc.perform(MockMvcRequestBuilders.
-                post(URL)
-                .content(request)
-                .contentType(MediaType.APPLICATION_JSON)
+                        post(URL)
+                        .content(request)
+                        .contentType(MediaType.APPLICATION_JSON)
                 )
                 .andDo(MockMvcResultHandlers.print())
                 .andExpect(MockMvcResultMatchers.content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
@@ -209,7 +209,7 @@ class UserControllerTest {
     @MethodSource("postUserBadRequestSource")
     @DisplayName("POST v1/users returns bad request when fields are empty")
     @Order(11)
-    void save_ReturnsBadRequest_WhenFieldsAreEmpty(String fileName, List<String> errors) throws Exception {
+    void save_ReturnsBadRequest_WhenFieldsAreInvalid(String fileName, List<String> errors) throws Exception {
         var request = fileUtils.readResourceFile("user/%s".formatted(fileName));
 
         var mvcResult = mockMvc.perform(MockMvcRequestBuilders.
@@ -229,19 +229,64 @@ class UserControllerTest {
 
     }
 
-    private static Stream<Arguments> postUserBadRequestSource(){
+    @ParameterizedTest
+    @MethodSource("putUserBadRequestSource")
+    @DisplayName("PUT v1/users returns bad request when fields are empty")
+    @Order(11)
+    void update_ReturnsBadRequest_WhenFieldsAreInvalid(String fileName, List<String> errors) throws Exception {
+        var request = fileUtils.readResourceFile("user/%s".formatted(fileName));
+
+        var mvcResult = mockMvc.perform(MockMvcRequestBuilders.
+                        put(URL)
+                        .content(request)
+                        .contentType(MediaType.APPLICATION_JSON)
+                )
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(MockMvcResultMatchers.status().isBadRequest())
+                .andReturn();
+
+        var resolvedException = mvcResult.getResolvedException();
+
+        Assertions.assertThat(resolvedException).isNotNull();
+
+        Assertions.assertThat(resolvedException.getMessage()).contains(errors);
+
+    }
+
+    private static Stream<Arguments> postUserBadRequestSource() {
+        var allRequiredErrors = allRequiredErrors();
+        var invalidEmailErrors = invalidEmailErrors();
+
+        return Stream.of(
+                Arguments.of("post-request-user-blank-fields-400.json", allRequiredErrors),
+                Arguments.of("post-request-user-empty-fields-400.json", allRequiredErrors),
+                Arguments.of("post-request-user-invalid-email-400.json", invalidEmailErrors)
+        );
+    }
+
+    private static Stream<Arguments> putUserBadRequestSource() {
+        var allRequiredErrors = allRequiredErrors();
+        allRequiredErrors.add("The field 'id' is required to update user");
+        var invalidEmailErrors = invalidEmailErrors();
+
+        return Stream.of(
+                Arguments.of("put-request-user-blank-fields-400.json", allRequiredErrors),
+                Arguments.of("put-request-user-empty-fields-400.json", allRequiredErrors),
+                Arguments.of("put-request-user-invalid-email-400.json", invalidEmailErrors)
+        );
+    }
+
+    private static List<String> invalidEmailErrors() {
+        var emailInvalidError = "E-mail is not valid";
+
+        return Collections.singletonList(emailInvalidError);
+    }
+
+    private static List<String> allRequiredErrors() {
         var firstNameRequiredError = "The field 'firstName' is required";
         var lastNameRequiredError = "The field 'lastName' is required";
         var emailRequiredError = "The field 'email' is required";
-        var emailInvalidError = "Email is not valid";
 
-        var allErrors = List.of(firstNameRequiredError, lastNameRequiredError, emailRequiredError);
-        var emailError = Collections.singletonList(emailInvalidError);
-
-        return Stream.of(
-                Arguments.of("post-request-user-blank-fields-400.json", allErrors),
-                Arguments.of("post-request-user-empty-fields-400.json", allErrors),
-                Arguments.of("post-request-user-invalid-email-400.json", emailError)
-        );
+        return new ArrayList<>(List.of(firstNameRequiredError, lastNameRequiredError, emailRequiredError));
     }
 }
